@@ -1,3 +1,11 @@
+2007-06-08  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	- (scorerender_admin_section_caching) Disable 'Clear cache' button if
+	directory not writable.
+	- (scorerender_generate_html_error) Reintroduce this function.
+	- Allow other handling methods upon rendering error.
+
 2007-06-07  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php: Better ngettext usage.
